[package]
name = "pds"
version = "0.1.1"
edition = "2024"

[dependencies]
bc_exch_api_funcs = {path = "../bc_exch_api_funcs"}
bc_utils_lg = {path = "../bc_utils_lg"}
bc_constructor = {path = "../bc_constructor"}
serde ={ version = "1.0", features = ["derive"]}
serde_json5 = "0.1"
rustc-hash = "1.1"
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
